<resources>
    <string name="app_name">MoneyCrab</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum">Screen slides are transitions between one entire screen to another and are common with UIs like setup wizards or slideshows. This lesson shows you how to do screen slides with a ViewPager provided by the support library. ViewPagers can animate screen slides automatically. Here\'s what a screen slide looks like that transitions from one screen of content to the next:</string>
    <string name="left_drawer_app_title">Money Crab</string>
    <string name="left_drawer_developer_email">sreng@camant.com</string>
    <string name="right_drawer_day">Day</string>
    <string name="right_drawer_week">Week</string>
    <string name="right_drawer_month">Month</string>
    <string name="right_drawer_year">Year</string>
    <string name="accounts">Accounts</string>
    <string name="categories">Categories</string>
    <string name="currencies">Currencies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="choose_category">Choose Category</string>
    <string name="delete">Delete</string>
    <string name="balance">Balance</string>
    <string name="currency_name">Currency Name</string>
    <string name="currency_sign">Sign</string>
    <string name="currency_name_hint">Riel</string>
    <string name="currency_sign_hint">R</string>
    <string name="ok">Ok</string>
    <string name="currency_name_required">Currency name is required!</string>
    <string name="currency_sign_required">Currency Sign is required!</string>
    <string name="account_name">Account Name</string>
    <string name="account_alt">Short name</string>
    <string name="currency">Currency</string>
    <string name="category_alt_hint">Shop</string>
    <string name="category_name_hint">Shop, Market, Mall</string>
    <string name="icon">Icon</string>
    <string name="category_type_not_found">Category Type not found</string>
    <string name="category_name_required">Category name is required</string>
    <string name="currency_required">Currency is required</string>
    <string name="category_icon_required">Please select an Icon</string>
    <string name="account_name_required">Account name is required</string>
    <string name="account_icon_required">Account icon is required</string>
    <string name="category_name">Category name</string>
</resources>
