<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.camant.moneycrab.activity.CategoryActivity">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:columnCount="2">
        <TextView android:text="@string/account_name"
            android:layout_row="0"
            android:layout_column="0" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/category_name_hint"
            android:ems="10"
            android:id="@+id/editTextName"
            android:layout_column="1"/>
        <TextView android:text="@string/account_alt"
            android:layout_column="0"
            android:layout_gravity="end"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/category_alt_hint"
            android:ems="10"
            android:id="@+id/editTextAlt"
            android:layout_column="1"/>
        <TextView android:text="@string/currency"
            android:layout_column="0"
            android:layout_gravity="end"/>
        <com.camant.moneycrab.view.Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/currency_sign_hint"
            android:ems="10"
            android:id="@+id/spinnerCurrency"
            android:layout_column="1"/>
        <TextView android:text="@string/icon"
            android:layout_column="0"
            android:layout_gravity="end"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="ICON-01"
            android:ems="10"
            android:id="@+id/textViewIcon"
            android:layout_column="1"/>
    </GridLayout>
</RelativeLayout>
